change Hapi peerDependency version to 16.x

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dmidz-utils": "^1.0.1"
   },
   "peerDependencies": {
-    "hapi": "^16.6.2"
+    "hapi": "16.x"
   },
   "devDependencies": {
     "lab": "^14.3.1"
