--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "homepage": "https://github.com/dmidz/dmidz-hapi-app#readme",
   "dependencies": {
     "bluebird": "^3.5.1",
-    "bunyan": "^1.8.12",
-    "bunyan-format": "^0.2.1",
-    "dmidz-utils": "^1.0.1"
+    "dmidz-utils": "^1.0.1",
+    "good": "^7.3.0",
+    "good-console": "^6.4.0",
+    "good-squeeze": "^5.0.2"
   },
   "peerDependencies": {
     "hapi": "16.x"
